--- a/notes/factivity/factivity-aaron.qmd
+++ b/notes/factivity/factivity-aaron.qmd
@@ -1,17 +1,18 @@
 ---
 title: "Factivity"
+bibliography: ../../pds.bib
 ---
 
-Having explored how PDS handles expected gradience in adjectives, we now turn to factivity—where gradience poses a deeper theoretical puzzle. While the gradience in adjective meanings arises from well-understood sources like vagueness and contextual variation, the gradience observed in judgments aimed at measuring is more difficult to explain.
+Having explored how PDS handles expected gradience in adjectives, we now turn to factivity—where gradience poses a deeper theoretical puzzle. While the gradience in adjective meanings arises from well-understood sources like vagueness and contextual variation, the gradience observed in judgments aimed at measuring factivity is more difficult to explain.
 
 ## Factivity and projection
 
 Before diving into computational models, let's review what makes factivity special. Factivity describes the property of certain predicates that are associated with the presupposition that their complements are true, even when the predicate is embedded under various operators. Compare these sentences:
 
-[]{@factive-projection-pos}
-[]{@factive-projection-neg}
-[]{@factive-projection-q}
-[]{@factive-projection-cond}
+[]{#factive-projection-pos}
+[]{#factive-projection-neg}
+[]{#factive-projection-q}
+[]{#factive-projection-cond}
 
 (@factive-projection-pos) Jo loved that Mo left.
 (@factive-projection-neg) Jo didn't love that Mo left.
@@ -20,8 +21,8 @@ Before diving into computational models, let's review what makes factivity speci
 
 In all cases, there's a strong inference that Mo actually left. We say that this inference *projects* through negation, questions, and conditionals. Contrast this with non-factive predicates:
 
-[]{@non-factive-pos}
-[]{@non-factive-neg}
+[]{#non-factive-pos}
+[]{#non-factive-neg}
 
 (@non-factive-pos) Jo {thinks, believes, said} that Mo left.
 (@non-factive-neg) Jo doesn't {think, believe, say} that Mo left.
@@ -34,7 +35,7 @@ But this traditional picture has been challenged by experimental work showing su
 
 What explains this gradience?
 
-## An importance distinction
+## An important distinction
 
 There are two importantly distinct questions that we need to disentangle before moving on:
 
@@ -43,7 +44,7 @@ There are two importantly distinct questions that we need to disentangle before 
 
 We're going to be concerned with the latter question (i) because it is something PDS, we believe, is uniquely well positioned to ask, and thus asking it provides a useful demonstration of the PDS's use; and (ii) because the former question has already been answered.
 
-[As discussed on Day 1](../background/case-studies.qmd), @degen_are_2022 argue that there is no clear line separates factive from non-factive predicates. Mean projection ratings vary continuously from *pretend* (lowest) to *be annoyed* (highest).
+[As discussed on Day 1](../background/case-studies.qmd), @degen_are_2022 argue that no clear line separates factive from non-factive predicates. Mean projection ratings vary continuously from *pretend* (lowest) to *be annoyed* (highest).
 
 ![Aggregate factivity measures from @degen_are_2022, showing continuous variation in projection ratings across predicates under questioning.](plots/projection_no_fact_means.pdf){width=750}
 
@@ -55,7 +56,7 @@ To get a sense for how these clusters appear in the data, we can look back at @f
 
 Remember that the idea behind this figure is that we could in principle derive a continuous measure of factivity by taking the minimum along the axes of @fig:veridicality-factivity and rectifying.
 
-The thing to note is that (i) there are clearly at least two separate "bumps" in the histogram; but (ii) the peak of the right bump is not at 1, as we might have expected. This is because some of these subclasses–e.g. the cognitive factives, which @karttunen_observations_1971 observes to not always give rise factivity–appear to themselves be associated with non-necessary factive inferences, while other classes–e.g. the emtoive factives, such as *love*, *hate*, and *be annoyed*–always do (up to measurement error and other sources of noise). 
+The thing to note is that (i) there are clearly at least two separate "bumps" in the histogram; but (ii) the peak of the right bump is not at 1, as we might have expected. This is because some of these subclasses–e.g. the cognitive factives, which @karttunen_observations_1971 observes to not always give rise factivity–appear to themselves be associated with non-necessary factive inferences, while other classes–e.g. the emotive factives, such as *love*, *hate*, and *be annoyed*–always do (up to measurement error and other sources of noise). 
 
 What explains the gradience *internal* to a class like the cognitive factives (which, again, we have known for more than 60 years *should* show this pattern)?
 
@@ -117,19 +118,17 @@ The experiments tested 20 predicates that theory suggests might pattern differen
 
 Each participant saw 20 items (one per predicate) plus controls, with predicates paired with different complement clauses and prior contexts across participants. @fig:projection-verb-means shows the resulting distributions.
 
-![Verb means from @degen_prior_2021's experiment 2b. Non-factive predicates are in red, "optionally factive" verbs are in teal, and "canonically factive" verbs are in green. Violin plots indicate the probability density of responses, showing the gradient nature of the empirical data.](plots/projection_no_fact_means.pdf){#fig:projection-verb-means}
-
 ## World knowledge: gradient or discrete?
 
 Before examining factivity proper, let's understand how the norming study helps us model world knowledge. The norming data allows us to test whether world knowledge itself involves discrete or gradient uncertainty. (The structure of this model is very similar to the one we covered in the [adjectives section](../adjectives/adjectives-aaron.html#world-knowledge-gradient-or-discrete).)
 
-![Left: ELPDs for the two models of the norming data from @degen_prior_2021's experiment 2a. Dotted line indicates estimated difference between the norming-discrete model and the norming-gradient model. Right: posterior predictive distributions for both models for the item *Sophia got a tattoo*, given either the fact *Sophia is a hipster* (5H) or *Sophia is a fashion model* (5L). Error bars indicate standard errors.](plots/norming_elpd.pdf){#fig:norming-elpds-pps}
+![Left: ELPDs for the two models of the norming data from @degen_prior_2021's experiment 2a. Dotted line indicates estimated difference between the norming-discrete model and the norming-gradient model.](plots/norming_elpd.pdf){#fig:norming-elpds-pps}
 
 As @fig:norming-elpds-pps shows, the gradient model of world knowledge substantially outperforms the discrete model (ΔELPD = 442.3 ± 23.1). The posterior predictive distributions reveal why: participants' judgments cluster away from the scale endpoints, a pattern the gradient model captures naturally but the discrete model cannot. This establishes that world knowledge contributes gradient uncertainty to factivity judgments.
 
 ## From PDS to Stan: implementing the theories
 
-Building on [the compilation pipeline introduced for adjectives](../adjectives/norming-model.qmd), let's see how PDS handles the competing theories of factivity. Recall that PDS outputs **kernel models**—the semantic core corresponding directly to our theoretical commitments.
+Building on [the compilation pipeline introduced for adjectives](../adjectives/norming-model.qmd), let's see how PDS handles the two competing theories of factivity. Recall that PDS outputs **kernel models**—the semantic core corresponding directly to our theoretical commitments.
 We'll focus mainly on the actual experimental items here, since the norming models for this task have a very similar character to the ones we introduced for gradable adjectives.
 
 ### Discrete-factivity in PDS
@@ -247,7 +246,41 @@ model {
 
 The highlighted lines represent the kernel model from PDS—encoding discrete factivity as a mixture of two response distributions. The unhighlighted portions add the statistical machinery needed for real data.
 
-### Wholly-gradient factivity
+### Wholly-gradient factivity in PDS
+
+The compilation process for the wholly-gradient model involves analogous components.
+In this case, the lexical entry for *know* branches *not* based on discourse state, but based on indices of the common ground:
+
+```haskell
+ "knows"       -> [ SynSem {
+                      syn = S :\: NP :/: S,
+                      sem = ty tau (lam s (purePP (lam p (lam x (lam i
+                        (ITE (TauKnow i)
+                             (And (epi i @@ x @@ p) (p @@ i)) -- factive: belief AND truth
+                             (epi i @@ x @@ p))))) @@ s))     -- non-factive: belief only
+                      } ]
+```
+
+Following the discrete lexical entry for *know*, the `ITE` here creates a discrete choice, but now about something different;
+i.e., how to use the index it receives from the common ground.
+
+
+To accommodate the novel type of index-sensitivity of *know*, the prior over indices encoded in the common ground must be updated:
+
+```haskell
+factivityPrior = let' x (LogitNormal 0 1) (let' y (LogitNormal 0 1) (let' z (LogitNormal 0 1) (Return (UpdCG (let' b (Bern x) (let' c (Bern y) (let' d (Bern z) (Return (UpdTauKnow b (UpdLing (lam x c) (UpdEpi (lam x (lam p d)) _0))))))) ϵ))))
+```
+
+The delta rules must also be modified to handle the factivity parameter as it is regulated by *indices*:
+
+```haskell
+indices :: DeltaRule
+indices = \case
+  TauKnow (UpdTauKnow b _) -> Just b
+  TauKnow (UpdEpi _ s)      -> Just (TauKnow s)
+  TauKnow (UpdLing _ s)     -> Just (TauKnow s)
+  -- ... other cases
+```
 
 The alternative wholly-gradient hypothesis treats factivity as continuously variable. The key modification to the PDS code is in how we encode the gradience. Instead of discrete branching, the gradient model computes a weighted combination.
 
